[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Levels/backgrounds/BaseMap.tres" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/GuiFont/HackbotFont_sub_header_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Levels/MapLevel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Characters/LoMapSpalmer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sound/Tracks/Morning-Routine-Lofi-Study-Music.mp3" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Levels/MapCamera.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Levels/BaseMap.gd" type="Script" id=7]

[node name="MapWorld_0" type="Node2D" groups=["base_map"]]
script = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.0627451, 0.407843, 0.164706, 1 )
show_behind_parent = true
margin_left = -1116.0
margin_top = -996.997
margin_right = 384.001
margin_bottom = 503.003
rect_scale = Vector2( 4.65348, 2.85368 )
texture = ExtResource( 1 )

[node name="MapCamera" type="Camera2D" parent="."]
scale = Vector2( 0.575521, 0.772004 )
current = true
limit_left = 0
limit_top = 0
script = ExtResource( 6 )

[node name="Line_1_2" type="Line2D" parent="."]
position = Vector2( 224, 512 )
scale = Vector2( 1.24, 1 )
points = PoolVector2Array( 0, 0, 512, 0 )
default_color = Color( 0.329412, 0.184314, 0.184314, 1 )
antialiased = true

[node name="Line_2_3" type="Line2D" parent="."]
position = Vector2( 296, 512 )
scale = Vector2( 1.24, 1 )
points = PoolVector2Array( 512, 0, 1024, 0 )
default_color = Color( 0.329412, 0.184314, 0.184314, 1 )
antialiased = true

[node name="Line_3_4" type="Line2D" parent="."]
position = Vector2( -336, 896 )
scale = Vector2( 1.24, 1 )
points = PoolVector2Array( 1024, 0, 1536, 0 )
default_color = Color( 0.329412, 0.184314, 0.184314, 1 )
antialiased = true

[node name="Line_4_5" type="Line2D" parent="."]
position = Vector2( 64, 512 )
scale = Vector2( 1, 0.8 )
points = PoolVector2Array( 1536, 448, 1536, 0 )
default_color = Color( 0.329412, 0.184314, 0.184314, 1 )
antialiased = true

[node name="Line_5_6" type="Line2D" parent="."]
position = Vector2( -1040, 448 )
scale = Vector2( 1.24, 1 )
points = PoolVector2Array( 1536, 448, 1024, 448 )
default_color = Color( 0.329412, 0.184314, 0.184314, 1 )
antialiased = true

[node name="MapLevel_0" parent="." instance=ExtResource( 3 )]
position = Vector2( 188, 511 )
level_scene = "Level_0_0"
level_number = 1

[node name="MapLevel_1" parent="." instance=ExtResource( 3 )]
position = Vector2( 896, 512 )
allow_direction_left = true
level_scene = "Level_0_1"
level_number = 2

[node name="MapLevel_2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1600, 512 )
allow_direction_left = true
level_number = 3

[node name="MapLevel_3" parent="." instance=ExtResource( 3 )]
position = Vector2( 1600, 896 )
allow_direction_up = true
level_number = 4

[node name="MapLevel_4" parent="." instance=ExtResource( 3 )]
position = Vector2( 896, 896 )
allow_direction_right = true
level_number = 5

[node name="MapLevel_5" parent="." instance=ExtResource( 3 )]
position = Vector2( 192, 896 )
allow_direction_right = true
level_number = 6

[node name="LoMapSpalmer" parent="." instance=ExtResource( 4 )]
position = Vector2( 64, 456 )
scale = Vector2( 0.253328, 0.248155 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Header" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 224.0
custom_fonts/font = ExtResource( 2 )
text = "World x Level y"
align = 1
valign = 1

[node name="SubHeader" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_top = 200.0
margin_right = 1280.0
margin_bottom = 491.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 2 )
text = "Coins 2/3 
Watermelon: Yes"
align = 1
valign = 1

[node name="Music" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 5 )
autoplay = true
